# shadLauncher4

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeWindowsPresets.json  README.md  REUSE.toml  crowdin.yml
.ci/: clang-format.sh
.github/: linux-appimage-qt.sh
.github/workflows/: build.yml
.github/workflows/scripts/: update_translation.sh  update_version.sh
LICENSES/: MIT.txt
cmake/: version.h.in
src/: game_info.h  main.cpp  shadLauncher4.qrc
src/common/: assert.cpp  crypto.cpp  crypto.h  fs_util.cpp  fs_util.h  io_file.cpp  io_file.h  lf_queue.h  log_analyzer.cpp  log_analyzer.h  memory_patcher.cpp  path_util.cpp  path_util.h  picosha2.h  scm_rev.cpp.in  scm_rev.cpp.in‎  scm_rev.h  versions.cpp  versions.h  zip_util.cpp  zip_util.h
src/common/logging/: backend.cpp  filter.cpp  types.h
src/core/: emulator_settings.cpp  emulator_settings.h  user_manager.cpp  user_manager.h  user_settings.cpp
src/core/file_format/: pkg.cpp  trp.cpp  trp.h
src/qt_ui/: about_dialog.cpp  about_dialog.h  cheats_patches_dialog.cpp  cheats_patches_dialog.h  cheats_patches_dialog.ui  check_update.cpp  check_update.h  control_settings.cpp  control_settings.ui  crypto_key_dialog.cpp  crypto_key_dialog.h  custom_dock_widget.h  custom_table_widget_item.cpp  custom_table_widget_item.h  downloader.cpp  downloader.h  flow_widget.cpp  flow_widget.h  flow_widget_item.cpp  flow_widget_item.h  game_compatibility.cpp  game_compatibility.h  game_info_cache.cpp  game_info_cache.h  game_install_dialog.cpp  game_install_dialog.h  game_install_dialog.ui  game_item.cpp  game_item.h  game_item_base.cpp  game_item_base.h  game_list.cpp  game_list.h  game_list_base.cpp  game_list_base.h  game_list_delegate.cpp  game_list_delegate.h  game_list_exporter.cpp  game_list_exporter.h  game_list_frame.cpp  (+58 more)
src/qt_ui/translations/: ar_SA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  fi_FI.ts  fr_FR.ts  hr_HR.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  nb.ts  nb_NO.ts  nl_NL.ts  nn_NO.ts  no_NO.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  sv_SE.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  update_translation.sh  vi_VN.ts  zh_CN.ts  zh_TW.ts
themes/: PS4 Glacier.qss
